ARROW-14630: [C++] Fix aggregation over scalar key columns

This fixes two issues:
- GroupByNode would try to finish its future twice
- GroupByNode wouldn't set the length of the key column batch, which broke down when using a scalar column as the key

Closes #11640 from lidavidm/arrow-14630

Authored-by: David Li <li.davidm96@gmail.com>
Signed-off-by: David Li <li.davidm96@gmail.com>